# workshop

./: conftest.py  pyproject.toml
.github/workflows/: run_tests.yml
tests/: test_auth.py  test_get_all.py
