[tool.poetry]
name = "workshop"
version = "0.1.0"
description = ""
authors = ["Maciej Kusz <maciej.kusz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.4.3"
requests = "^2.31.0"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--tb=short"
log_cli = true
log_cli_level = "INFO"
markers = [
    "deprecated: Tests no longer used",
    "smoke: Smoke tests",
    "wip: Work In Progress",
]